--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
-  <header class="header">
-    <div class="header__container">
-    </div>
-  </header>
-  <main class="content">
-    <div class="content__container">
-      <img class="lead__image" src="./images/#" alt="Mesto">
-    </div>
- </main>
-  <footer class="footer">
-    <div class="footer__container">
+  <div class="wrapper">
+    <header class="header">
+      <img class="header__image" src="./images/logo-white.svg" alt="Mesto">
+      <div class="header__divider"></div>
+    </header>
+    <main class="content">
+      <div class="content__container">
+      </div>
+   </main>
+    <footer class="footer">
+      <div class="footer__container">
 
-      <p class="footer__copyright">&copy; 2020. Спиридонов Андрей</p>
-    </div>
- </footer>
+        <!-- <p class="footer__copyright">&copy; 2020. Спиридонов Андрей</p> -->
+      </div>
+   </footer>
+  </div>
 </body>
 </html>
