--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <footer class="footer">
       <div class="footer__container">
 
-        <!-- <p class="footer__copyright">&copy; 2020. Спиридонов Андрей</p> -->
+        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </div>
    </footer>
   </div>
