выполнена разметка блока profile

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 <body class="page">
   <div class="wrapper">
     <header class="header">
-      <img class="header__image" src="./images/logo-white.svg" alt="Mesto">
+      <img class="header__image" src="./images/logo-white.svg" alt="Логотип">
       <div class="header__divider"></div>
     </header>
     <main class="content">
-      <div class="content__container">
-      </div>
+      <section class="profile">
+        <div class="profile__container-info">
+          <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
+          <div class="profile__info">
+            <p class="profile__name">Энакин Скайуокер</p>
+            <p class="profile__about">Будущий Джедай</p>
+          </div>
+        </div>
+        <a href="#" class="profile__add-button">
+          <img class="profile__plus-button" src="./images/plus.svg" alt="Плюсик на кнопке">
+        </a>
+      </section>
    </main>
     <footer class="footer">
       <div class="footer__container">
