черновая сборка блока profile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="profile__container-info">
           <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
           <div class="profile__info">
-            <p class="profile__name">Энакин Скайуокер</p>
+            <p class="profile__name">Энакин Скайуокер<a href="#" class="profile__edit-button"><img class="profile__pencil-button" src="./images/pencil.svg" alt="Карандаш на кнопке"></a>
+            </p>
             <p class="profile__about">Будущий Джедай</p>
           </div>
         </div>
