описана разметка блока cards

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
           <img class="profile__plus-button" src="./images/plus.svg" alt="Плюсик на кнопке">
         </a>
       </section>
+      <section class="cards">
+        <ul class="card__list">
+          <li class="card__item">
+            <img src="./images/#" alt="" class="card__image">
+            <div class="card__info">
+              <p class="card__title"></p>
+              <a href="#" class="card__add-like">
+                <img class="profile__like-image" src="./images/like.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+        </ul>
+      </section>
    </main>
     <footer class="footer">
       <div class="footer__container">
