--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </a>
       </section>
       <section class="cards">
-        <ul class="card__list">
-          <li class="card__item">
+        <ul class="cards__list">
+          <li class="cards__item">
             <img src="./images/#" alt="" class="card__image">
-            <div class="card__info">
-              <p class="card__title"></p>
-              <a href="#" class="card__add-like">
-                <img class="profile__like-image" src="./images/like.svg" alt="сердечко">
+            <div class="cards__description">
+              <p class="cards__title"></p>
+              <a href="#" class="cards__add-like">
+                <img class="cards__like-image" src="./images/like.svg" alt="сердечко">
               </a>
             </div>
           </li>
