--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./images/#" alt="" class="card__image">
             <div class="cards__description">
               <p class="cards__title"></p>
-              <a href="#" class="cards__add-like">
+              <a href="#" class="cards__link">
                 <img class="cards__like-image" src="./images/like.svg" alt="сердечко">
               </a>
             </div>
