--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="profile__info">
             <p class="profile__name">Энакин Скайуокер<a href="#" class="profile__edit-button"><img class="profile__pencil-button" src="./images/pencil.svg" alt="Карандаш на кнопке"></a>
             </p>
-            <p class="profile__about">Будущий Джедай</p>
+            <p class="profile__about">Жизнь на Татуине</p>
           </div>
         </div>
         <a href="#" class="profile__add-button">
@@ -29,11 +29,56 @@
       <section class="cards">
         <ul class="cards__list">
           <li class="cards__item">
-            <img src="./images/#" alt="" class="card__image">
+            <img src="./images/tatooine.jpg" alt="Татуин" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title"></p>
+              <p class="cards__title">Татуин</p>
               <a href="#" class="cards__link">
-                <img class="cards__like-image" src="./images/like.svg" alt="сердечко">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+          <li class="cards__item">
+            <img src="./images/tatooine-farm.jpg" alt="Ферма" class="cards__image">
+            <div class="cards__description">
+              <p class="cards__title">Ферма</p>
+              <a href="#" class="cards__link">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+          <li class="cards__item">
+            <img src="./images/tuskens.jpg" alt="Тускены" class="cards__image">
+            <div class="cards__description">
+              <p class="cards__title">Тускены</p>
+              <a href="#" class="cards__link">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+          <li class="cards__item">
+            <img src="./images/podracing.jpg" alt="гонки на подах" class="cards__image">
+            <div class="cards__description">
+              <p class="cards__title">Гонка на подах</p>
+              <a href="#" class="cards__link">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+          <li class="cards__item">
+            <img src="./images/podracing-2.jpg" alt="гонки на подах" class="cards__image">
+            <div class="cards__description">
+              <p class="cards__title">Гонка на подах</p>
+              <a href="#" class="cards__link">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
+              </a>
+            </div>
+          </li>
+          <li class="cards__item">
+            <img src="./images/r2-d2.jpg" alt="робот Р2-Д2" class="cards__image">
+            <div class="cards__description">
+              <p class="cards__title">Р2-Д2</p>
+              <a href="#" class="cards__link">
+                <img class="cards__like" src="./images/heart.svg" alt="сердечко">
               </a>
             </div>
           </li>
