черновая вёрстка модального окна

--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
           </li>
         </ul>
       </section>
-   </main>
+      <div class="modal modal_active">
+        <div class="modal__container">
+          <p class="modal__title">Редактировать профиль</p>
+          <form class="modal__form" action="">
+            <input type="text" class="modal__input" id="author-name" name="author-name" value="Энакин Скайуокер">
+            <input type="text" class="modal__input" id="author-description" name="author-description" value="Жизнь на Татуине">
+            <button type="submit" class="modal__submit-button">Сохранить</button>
+            <div class="modal__close"></div>
+          </form>
+        </div>
+      </div>
+    </main>
     <footer class="footer">
       <div class="footer__container">
-
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </div>
    </footer>
