--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="modal modal_active">
         <div class="modal__container">
           <p class="modal__title">Редактировать профиль</p>
-          <form class="modal__form" action="">
+          <form class="modal__form">
             <input type="text" class="modal__input" id="author-name" name="author-name" value="Энакин Скайуокер">
             <input type="text" class="modal__input" id="author-description" name="author-description" value="Жизнь на Татуине">
             <button type="submit" class="modal__submit-button">Сохранить</button>
