--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </div>
           </li>
           <li class="cards__item">
-            <img src="./images/podracing-2.jpg" alt="гонки на подах" class="cards__image">
+            <img src="./images/podracing-2.jpg" alt="под Энакина" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Гонка на подах</p>
+              <p class="cards__title">Под Энакина</p>
               <a href="#" class="cards__link">
                 <img class="cards__like" src="./images/heart.svg" alt="сердечко">
               </a>
