подгон под адаптивную версию

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     </header>
     <main class="content">
       <section class="profile">
-        <div class="profile__container-info">
-          <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
-          <div class="profile__info">
-            <p class="profile__name">Энакин Скайуокер<a href="#" class="profile__edit-button"><img class="profile__pencil-button" src="./images/pencil.svg" alt="Карандаш на кнопке"></a>
-            </p>
-            <p class="profile__about">Жизнь на Татуине</p>
+
+        <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
+        <div class="profile__info">
+          <div class="profile__wrapper">
+            <p class="profile__name">Энакин Скайуокер</p>
+            <a href="#" class="profile__edit-button"><img class="profile__pencil-button" src="./images/pencil.svg" alt="Карандаш на кнопке"></a>
           </div>
+          <p class="profile__about">Жизнь на Татуине</p>
         </div>
+
         <a href="#" class="profile__add-button">
           <img class="profile__plus-button" src="./images/plus.svg" alt="Плюсик на кнопке">
         </a>
