добавлен класс cards__like_active

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="./images/tatooine.jpg" alt="Татуин" class="cards__image">
             <div class="cards__description">
               <p class="cards__title">Татуин</p>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like cards__like_active"></button>
             </div>
           </li>
           <li class="cards__item">
