--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__wrapper">
-            <p class="profile__name">Энакин Скайуокер</p>
+            <h1 class="profile__name">Энакин Скайуокер</h1>
             <button type="button" class="profile__edit-button"></button>
           </div>
           <p class="profile__about">Жизнь на Татуине</p>
