--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
           <li class="cards__item">
             <img src="./images/tatooine.jpg" alt="Татуин" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Татуин</p>
+              <h2 class="cards__title">Татуин</h2>
               <button type="button" class="cards__like cards__like_active"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/tatooine-farm.jpg" alt="Ферма" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Ферма</p>
+              <h2 class="cards__title">Ферма</h2>
               <button type="button" class="cards__like"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/tuskens.jpg" alt="Тускены" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Тускены</p>
+              <h2 class="cards__title">Тускены</h2>
               <button type="button" class="cards__like"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/podracing.jpg" alt="гонки на подах" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Гонка на подах</p>
+              <h2 class="cards__title">Гонка на подах</h2>
               <button type="button" class="cards__like"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/podracing-2.jpg" alt="под Энакина" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Под Энакина</p>
+              <h2 class="cards__title">Под Энакина</h2>
               <button type="button" class="cards__like"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/r2-d2.jpg" alt="робот Р2-Д2" class="cards__image">
             <div class="cards__description">
-              <p class="cards__title">Р2-Д2</p>
+              <h2 class="cards__title">Р2-Д2</h2>
               <button type="button" class="cards__like"></button>
             </div>
           </li>
@@ -72,7 +72,7 @@
       </section>
       <div class="modal modal_active">
         <div class="modal__container">
-          <p class="modal__title">Редактировать профиль</p>
+          <h2 class="modal__title">Редактировать профиль</h2>
           <form class="modal__form">
             <input type="text" class="modal__input" id="author-name" name="author-name" value="Энакин Скайуокер">
             <input type="text" class="modal__input" id="author-description" name="author-description" value="Жизнь на Татуине">
