--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="modal modal_active">
       <div class="modal__container">
         <h2 class="modal__title">Редактировать профиль</h2>
-        <form class="modal__form">
+        <form class="modal__form" name="authorForm" method="post">
           <input type="text" class="modal__input" id="author-name" name="author-name" value="Энакин Скайуокер">
           <input type="text" class="modal__input" id="author-description" name="author-description" value="Жизнь на Татуине">
           <button type="submit" class="modal__submit-button">Сохранить</button>
