--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <div class="modal__container">
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__form" name="authorForm" method="post">
-          <input type="text" class="modal__input" id="author-name" name="author-name" value="Энакин Скайуокер">
-          <input type="text" class="modal__input" id="author-description" name="author-description" value="Жизнь на Татуине">
+          <input type="text" class="modal__input" id="author-name" name="author-name" placeholder="Имя">
+          <input type="text" class="modal__input" id="author-description" name="author-description" placeholder="О себе">
           <button type="submit" class="modal__submit-button">Сохранить</button>
           <button type="button" class="modal__close"></button>
         </form>
