--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Энакин Скайуокер</h1>
-            <button type="button" class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button" aria-label="Редактировать"></button>
           </div>
           <p class="profile__about">Жизнь на Татуине</p>
         </div>
-        <button type="button" class="profile__add-button"></button>
+        <button type="button" class="profile__add-button" aria-label="Добавить"></button>
       </section>
       <section class="cards">
         <ul class="cards__list">
@@ -29,42 +29,42 @@
             <img src="./images/tatooine.jpg" alt="Татуин" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Татуин</h2>
-              <button type="button" class="cards__like cards__like_active"></button>
+              <button type="button" class="cards__like cards__like_active" aria-label="Нравиться"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/tatooine-farm.jpg" alt="Ферма" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Ферма</h2>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/tuskens.jpg" alt="Тускены" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Тускены</h2>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/podracing.jpg" alt="гонки на подах" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Гонка на подах</h2>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/podracing-2.jpg" alt="под Энакина" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Под Энакина</h2>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
             </div>
           </li>
           <li class="cards__item">
             <img src="./images/r2-d2.jpg" alt="робот Р2-Д2" class="cards__image">
             <div class="cards__description">
               <h2 class="cards__title">Р2-Д2</h2>
-              <button type="button" class="cards__like"></button>
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
             </div>
           </li>
         </ul>
@@ -81,9 +81,9 @@
         <form class="modal__form" name="authorForm" method="post">
           <input type="text" class="modal__input" id="author-name" name="author-name" placeholder="Имя">
           <input type="text" class="modal__input" id="author-description" name="author-description" placeholder="О себе">
-          <button type="submit" class="modal__submit-button">Сохранить</button>
+          <button type="submit" class="modal__submit-button" aria-label="Сохранить">Сохранить</button>
         </form>
-        <button type="button" class="modal__close"></button>
+        <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
     </div>
   </div>
