--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="./images/avatar.jpg" alt="Аватарка" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__wrapper">
-            <h1 class="profile__name">Энакин Скайуокер</h1>
+            <h1 class="profile__name">Скайуокер</h1>
             <button type="button" class="profile__edit-button" aria-label="Редактировать"></button>
           </div>
           <p class="profile__about">Жизнь на Татуине</p>
