--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <img src="" alt="" class="cards__image">
           <div class="cards__description">
             <h2 class="cards__title"></h2>
-            <button type="button" class="cards__like cards__like_active" aria-label="Нравиться"></button>
+            <button type="button" class="cards__like" aria-label="Нравиться"></button>
           </div>
         </li>
       </template>
