--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
       </div>
     </footer>
-    <div class="modal modal_active">
+    <div class="modal modal__profile">
       <div class="modal__container">
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__form" name="authorForm" method="post">
