открытие модальных окон вынес в отдельную функцию

--- a/index.html
+++ b/index.html
@@ -17,57 +17,14 @@
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Скайуокер</h1>
-            <button type="button" class="profile__edit-button" aria-label="Редактировать"></button>
+            <button type="button" class="profile__edit-button" data-button="edit-profile" aria-label="Редактировать"></button>
           </div>
           <p class="profile__about">Жизнь на Татуине</p>
         </div>
-        <button type="button" class="profile__add-button" aria-label="Добавить"></button>
+        <button type="button" class="profile__add-button" data-button="add-card" aria-label="Добавить"></button>
       </section>
       <section class="cards">
         <ul class="cards__list">
-
-          <!-- <li class="cards__item">
-            <img src="./images/tatooine.jpg" alt="Татуин" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Татуин</h2>
-              <button type="button" class="cards__like cards__like_active" aria-label="Нравиться"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="./images/tatooine-farm.jpg" alt="Ферма" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Ферма</h2>
-              <button type="button" class="cards__like" aria-label="Нравиться"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="./images/tuskens.jpg" alt="Тускены" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Тускены</h2>
-              <button type="button" class="cards__like" aria-label="Нравиться"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="./images/podracing.jpg" alt="гонки на подах" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Гонка на подах</h2>
-              <button type="button" class="cards__like" aria-label="Нравиться"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="./images/podracing-2.jpg" alt="под Энакина" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Под Энакина</h2>
-              <button type="button" class="cards__like" aria-label="Нравиться"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img src="./images/r2-d2.jpg" alt="робот Р2-Д2" class="cards__image">
-            <div class="cards__description">
-              <h2 class="cards__title">Р2-Д2</h2>
-              <button type="button" class="cards__like" aria-label="Нравиться"></button>
-            </div>
-          </li> -->
         </ul>
       </section>
       <template id="cards__item">
