добавление новой карточки

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <h2 class="modal__title">Добавить карточку</h2>
         <form class="modal__form" name="cardForm" method="post">
           <input type="text" class="modal__input" id="card-name" name="card-name" placeholder="Название">
-          <input type="text" class="modal__input" id="card-description" name="card-description" placeholder="Ссылка на изображение">
-          <button type="submit" class="modal__submit-button" aria-label="Сохранить">Добавить</button>
+          <input type="text" class="modal__input" id="card-link" name="card-link" placeholder="Ссылка на изображение">
+          <button type="submit" class="modal__submit-button modal__button-add-card " aria-label="Добавить">Добавить</button>
         </form>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
