--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <form class="modal__form" name="authorForm" method="post">
           <input type="text" class="modal__input" id="author-name" name="author-name" placeholder="Имя">
           <input type="text" class="modal__input" id="author-description" name="author-description" placeholder="О себе">
-          <button type="submit" class="modal__submit-button" aria-label="Сохранить">Сохранить</button>
+          <button type="submit" class="modal__submit-button modal__button-edit-profile" aria-label="Сохранить">Сохранить</button>
         </form>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
