--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
     </div>
+    <div class="modal modal__image">
+      <div class="modal__container modal__container_image">
+        <img class="modal__image-big" src="" alt="">
+        <h2 class="modal__image-text">Text</h2>
+        <button type="button" class="modal__close" aria-label="Закрыть"></button>
+      </div>
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
