--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="modal modal__image">
       <div class="modal__container modal__container_image">
-        <img class="modal__image-big" src="" alt="">
+        <img class="modal__image-big" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/ivanovo.jpg" alt="">
         <h2 class="modal__image-text">Text</h2>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
