скорректированна логика открытия модальноых окон

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </section>
       <template id="cards__item">
         <li class="cards__item">
-          <img src="" alt="" class="cards__image">
+          <img src="" alt="" class="cards__image" data-image="image">
           <div class="cards__description">
             <h2 class="cards__title"></h2>
             <button type="button" class="cards__like" aria-label="Нравиться"></button>
