добавлена разметка и стили кнопки remove

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <h2 class="cards__title"></h2>
             <button type="button" class="cards__like" aria-label="Нравиться"></button>
           </div>
+          <button type="button" class="cards__remove"></button>
         </li>
       </template>
     </main>
