--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </main>
     <footer class="footer">
       <div class="footer__container">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+        <p class="footer__copyright">&copy; 2023 Mesto Tatooine</p>
       </div>
     </footer>
     <div class="modal modal__edit-profile">
