убраны ненужные дата атрибуты

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Скайуокер</h1>
-            <button type="button" class="profile__edit-button" data-button="edit-profile" aria-label="Редактировать"></button>
+            <button type="button" class="profile__edit-button" aria-label="Редактировать"></button>
           </div>
           <p class="profile__about">Жизнь на Татуине</p>
         </div>
-        <button type="button" class="profile__add-button" data-button="add-card" aria-label="Добавить"></button>
+        <button type="button" class="profile__add-button" aria-label="Добавить"></button>
       </section>
       <section class="cards">
         <ul class="cards__list">
@@ -29,7 +29,7 @@
       </section>
       <template id="cards__item">
         <li class="cards__item">
-          <img src="" alt="" class="cards__image" data-image="image">
+          <img src="" alt="" class="cards__image">
           <div class="cards__description">
             <h2 class="cards__title"></h2>
             <button type="button" class="cards__like" aria-label="Нравиться"></button>
