--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,14 @@
       <div class="modal__container">
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__form" name="authorForm" method="post">
-          <input type="text" class="modal__input" id="author-name" name="author-name" placeholder="Имя">
-          <input type="text" class="modal__input" id="author-description" name="author-description" placeholder="О себе">
+          <label class="modal__field">
+            <input type="text" class="modal__input" id="author-name" name="author-name" placeholder="Имя" required minlength="7">
+            <span class="modal__input-error author-name-error"></span>
+          </label>
+          <label class="modal__field">
+            <input type="text" class="modal__input" id="author-description" name="author-description" placeholder="О себе" required minlength="7">
+            <span class="modal__input-error author-description-error"></span>
+          </label>
           <button type="submit" class="modal__submit-button modal__button-edit-profile" aria-label="Сохранить">Сохранить</button>
         </form>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
@@ -57,9 +63,15 @@
       <div class="modal__container">
         <h2 class="modal__title">Добавить карточку</h2>
         <form class="modal__form" name="cardForm" method="post">
-          <input type="text" class="modal__input" id="card-name" name="card-name" placeholder="Название">
-          <input type="text" class="modal__input" id="card-link" name="card-link" placeholder="Ссылка на изображение">
-          <button type="submit" class="modal__submit-button modal__button-add-card " aria-label="Добавить">Добавить</button>
+          <label class="modal__field">
+            <input type="text" class="modal__input" id="card-name" name="card-name" placeholder="Название" required minlength="7">
+            <span class="modal__input-error card-name-error"></span>
+          </label>
+          <label class="modal__field">
+            <input type="text" class="modal__input" id="card-link" name="card-link" placeholder="Ссылка на изображение" required minlength="7">
+            <span class="modal__input-error card-link-error"></span>
+          </label>
+          <button type="submit" class="modal__submit-button modal__button-add-card" aria-label="Добавить">Добавить</button>
         </form>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
