--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       </div>
     </footer>
     <div class="modal modal__edit-profile">
-      <div class="modal__container">
+      <div class="modal__container modal__container_size">
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__form" name="authorForm" method="post">
           <label class="modal__field">
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="modal modal__add-card">
-      <div class="modal__container">
+      <div class="modal__container modal__container_size">
         <h2 class="modal__title">Добавить карточку</h2>
         <form class="modal__form" name="cardForm" method="post">
           <label class="modal__field">
