изменено регулярное выражение

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
               required
               minlength="2"
               maxlength="40"
-              pattern="^[A-Za-zА-Яа-яёЁ]+(?:[-'\s][A-Za-zА-Яа-яёЁ]+)*$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
               data-error-message="Разрешены только латинские буквы, кириллические буквы, знаки дефиса и пробелы."
             >
             <span class="modal__input-error author-name-error"></span>
@@ -69,7 +69,7 @@
               required
               minlength="2"
               maxlength="200"
-              pattern="^[A-Za-zА-Яа-яёЁ]+(?:[-'\s][A-Za-zА-Яа-яёЁ]+)*$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
               data-error-message="Разрешены только латинские буквы, кириллические буквы, знаки дефиса и пробелы."
             >
             <span class="modal__input-error author-description-error"></span>
@@ -92,7 +92,7 @@
               required
               minlength="2"
               maxlength="30"
-              pattern="^[A-Za-zА-Яа-яёЁ]+(?:[-'\s][A-Za-zА-Яа-яёЁ]+)*$"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s-]+$"
               data-error-message="Разрешены только латинские буквы, кириллические буквы, знаки дефиса и пробелы."
             >
             <span class="modal__input-error card-name-error"></span>
