--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="<%=require('./images/avatar.jpg')%>" alt="Аватарка" class="profile__avatar">
+        <button class="profile__edit-avatar-button">
+          <img src="<%=require('./images/avatar.jpg')%>" alt="Аватарка" class="profile__avatar">
+        </button>
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Скайуокер</h1>
