--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,25 @@
         <p class="footer__copyright">&copy; 2023 Mesto Tatooine</p>
       </div>
     </footer>
+    <div class="modal modal__edit-avatar-profile">
+      <div class="modal__container modal__container_size">
+        <h2 class="modal__title">Обновить аватар</h2>
+        <form class="modal__form" name="authorForm" method="post">
+          <label class="modal__field">
+            <input type="url"
+              class="modal__input"
+              id="card-link"
+              name="card-link"
+              placeholder="Ссылка на изображение"
+              required
+            >
+            <span class="modal__input-error card-link-error"></span>
+          </label>
+          <button type="submit" class="modal__submit-button modal__button-edit-profile" aria-label="Сохранить">Сохранить</button>
+        </form>
+        <button type="button" class="modal__close" aria-label="Закрыть"></button>
+      </div>
+    </div>
     <div class="modal modal__edit-profile">
       <div class="modal__container modal__container_size">
         <h2 class="modal__title">Редактировать профиль</h2>
