--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
     <div class="modal modal__edit-avatar-profile">
       <div class="modal__container modal__container_size">
         <h2 class="modal__title">Обновить аватар</h2>
-        <form class="modal__form" name="authorForm" method="post">
+        <form class="modal__form" name="authorAvatarForm" method="post">
           <label class="modal__field">
             <input type="url"
               class="modal__input"
@@ -58,7 +58,7 @@
             >
             <span class="modal__input-error card-link-error"></span>
           </label>
-          <button type="submit" class="modal__submit-button modal__button-edit-profile" aria-label="Сохранить">Сохранить</button>
+          <button type="submit" class="modal__submit-button modal__button-edit-avatar-profile" aria-label="Сохранить">Сохранить</button>
         </form>
         <button type="button" class="modal__close" aria-label="Закрыть"></button>
       </div>
