добавлен счётчик кол-ва лайков

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,10 @@
           <img src="" alt="" class="cards__image">
           <div class="cards__description">
             <h2 class="cards__title"></h2>
-            <button type="button" class="cards__like" aria-label="Нравиться"></button>
+            <div class="cards__group-like">
+              <button type="button" class="cards__like" aria-label="Нравиться"></button>
+              <span class="cards__number-likes">1</span>
+            </div>
           </div>
           <button type="button" class="cards__remove"></button>
         </li>
