--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
           <label class="modal__field">
             <input type="url"
               class="modal__input"
-              id="card-link"
-              name="card-link"
+              id="author-avatar"
+              name="author-avatar"
               placeholder="Ссылка на изображение"
               required
             >
-            <span class="modal__input-error card-link-error"></span>
+            <span class="modal__input-error author-avatar-error"></span>
           </label>
           <button type="submit" class="modal__submit-button modal__button-edit-avatar-profile" aria-label="Сохранить">Сохранить</button>
         </form>
